<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:padding="@dimen/medium_padding_size"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/textview_signup_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_signin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textinputlayout_username"
            app:layout_constraintVertical_chainStyle="packed"/>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_signup_title"
            app:layout_constraintBottom_toTopOf="@+id/textview_select_country">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_type_your_username"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id="@+id/textview_select_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_select_country_of_origin"
            android:padding="@dimen/small_padding_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinputlayout_username"
            app:layout_constraintBottom_toTopOf="@+id/spinner_country"/>

    <Spinner
            app:layout_constraintVertical_chainStyle="packed"
            android:id="@+id/spinner_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_select_country"
            app:layout_constraintBottom_toTopOf="@+id/textinputlayout_password"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_country"
            app:layout_constraintBottom_toTopOf="@+id/textinputlayout_password_confirm">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleTint="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinputlayout_password"
            app:layout_constraintBottom_toTopOf="@+id/button_signup">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/button_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_signup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinputlayout_password_confirm"
            app:layout_constraintBottom_toTopOf="@+id/textview_to_signin"/>

    <TextView
            android:id="@+id/textview_to_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_to_signin"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_signup"
    />

</androidx.constraintlayout.widget.ConstraintLayout>