<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/cardview_default_elevation"
        tools:showIn="@layout/contact_detail_fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="@dimen/medium_padding_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline_contact"
                app:layout_constraintGuide_percent="0.4"
                android:orientation="vertical"
        />

        <TextView
                android:id="@+id/textview_title_contact_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/title_contact_information"
                style="@style/textTitleStyle"
        />

        <TextView
                android:id="@+id/textview_label_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline_contact"
                app:layout_constraintTop_toBottomOf="@+id/textview_title_contact_info"
                android:text="@string/label_name"
        />

        <TextView
                android:transitionName="name"
                android:id="@+id/textview_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline_contact"
                app:layout_constraintTop_toBottomOf="@+id/textview_title_contact_info"

        />

        <TextView
                android:id="@+id/textview_label_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline_contact"
                app:layout_constraintTop_toBottomOf="@+id/textview_name"
                android:text="@string/label_username"
        />

        <TextView
                android:transitionName="username"
                android:id="@+id/textview_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline_contact"
                app:layout_constraintTop_toBottomOf="@+id/textview_name"

        />

        <TextView
                android:id="@+id/textview_label_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline_contact"
                app:layout_constraintTop_toBottomOf="@+id/textview_username"
                android:text="@string/label_email"
        />

        <TextView
                android:transitionName="email"
                android:id="@+id/textview_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline_contact"
                app:layout_constraintTop_toBottomOf="@+id/textview_username"

        />

        <TextView
                android:id="@+id/textview_label_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline_contact"
                app:layout_constraintTop_toBottomOf="@+id/textview_email"
                android:text="@string/label_phone"
        />

        <TextView
                android:transitionName="phone"
                android:id="@+id/textview_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline_contact"
                app:layout_constraintTop_toBottomOf="@+id/textview_email"

        />

        <TextView
                android:id="@+id/textview_label_website"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline_contact"
                app:layout_constraintTop_toBottomOf="@+id/textview_phone"
                android:text="@string/label_website"
        />

        <TextView
                android:id="@+id/textview_website"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline_contact"
                app:layout_constraintTop_toBottomOf="@+id/textview_phone"

        />

        <View
                android:layout_margin="@dimen/small_padding_size"
                android:id="@+id/view_divider_company"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_website"
        />

        <TextView
                android:id="@+id/textview_title_company_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_divider_company"
                android:text="@string/title_company"
                style="@style/textTitleStyle"
        />

        <TextView
                android:id="@+id/textview_label_company_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline_contact"
                app:layout_constraintTop_toBottomOf="@+id/textview_title_company_info"
                android:text="@string/label_company_name"
        />

        <TextView
                android:id="@+id/textview_company_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline_contact"
                app:layout_constraintTop_toBottomOf="@+id/textview_title_company_info"

        />

        <TextView
                android:id="@+id/textview_label_company_catchphrase"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline_contact"
                app:layout_constraintTop_toBottomOf="@+id/textview_company_name"
                android:text="@string/label_catchphase"
        />

        <TextView
                android:id="@+id/textview_company_catchphrase"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline_contact"
                app:layout_constraintTop_toBottomOf="@+id/textview_company_name"

        />

        <TextView
                android:id="@+id/textview_label_company_bs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline_contact"
                app:layout_constraintTop_toBottomOf="@+id/textview_company_catchphrase"
                android:text="@string/label_bs"
        />

        <TextView
                android:id="@+id/textview_company_bs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline_contact"
                app:layout_constraintTop_toBottomOf="@+id/textview_company_catchphrase"

        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>